--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,17 @@
 <resources>
-    <string name="app_name">Stock Hawk</string>
+    <string name="app_name" translatable="false">Stock Hawk</string>
 
     <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
+    <string name="pref_stocks_key" translatable="false">stocks</string>
+    <string name="pref_display_mode_key" translatable="false">displayMode</string>
+    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>
+    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
+    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>
 
-    <string name="pref_stocks_key">stocks</string>
-
-
-    <string name="pref_display_mode_key">displayMode</string>
-    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>
-
-    <string name="pref_display_mode_absolute_key">absolute</string>
-    <string name="pref_display_mode_percentage_key">percentage</string>
-
-    <string name="default_stocks_yahoo">YHOO</string>
-    <string name="default_stocks_apple">AAPL</string>
-    <string name="default_stocks_microsoft">MSFT</string>
-    <string name="default_stocks_facebook">FB</string>
-
-
-    <string name="action_change_units">@string/pref_display_mode_key</string>
-
+    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
+    <string name="default_stocks_apple" translatable="false">AAPL</string>
+    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
+    <string name="default_stocks_facebook" translatable="false">FB</string>
 
     <string name="dialog_title">Add Stock</string>
     <string name="dialog_hint">Symbol (e.g. GOOG)</string>
@@ -31,5 +23,20 @@
 
     <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
+    <string name="toast_stock_symbol_not_found">Stock symbol %s not found.</string>
+
+    <string name="add_new_stock_cd">Add new stock</string>
+    <string name="detail_activity_cd">Stock details of %s</string>
+    <string name="day_lowest_cd">Today\'s lowest stock value %s</string>
+    <string name="day_highest_cd">Today\'s highest stock value %s</string>
+    <string name="stock_price_cd">Stock price %s</string>
+    <string name="display_mode_cd">Toggle display mode between absolute and percentage values</string>
+    <string name="display_mode_change_cd">Display mode changed to %s</string>
+    <string name="stock_increment_cd">Stock value increased by %s</string>
+    <string name="stock_decrement_cd">Stock value decreased by %s</string>
+    <string name="widget_cd">Stock hawk widget</string>
+
+    <string name="empty_stock_list">No stocks added to list</string>
+    <string name="widget_label">Stock Details</string>
 
 </resources>
